--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ disklrucache = "2.0.2"
 appcompat = "1.7.0"
 html = "1.0.2"
 kotlin = "2.0.0"
-markdown = "1.0.5"
+markdown = "1.0.2"
 okhttp = "4.12.0"
 recyclerview = "1.3.2"
 android-compileSdk = "34"
@@ -22,8 +22,13 @@ androidx-annotation = { module = "androidx.annotation:annotation", version.ref =
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 disklrucache = { module = "com.jakewharton:disklrucache", version.ref = "disklrucache" }
-html = { module = "com.zzhoujay:html", version.ref = "html" }
-markdown = { module = "com.zzhoujay.markdown:markdown", version.ref = "markdown" }
+
+
+#html = { module = "com.zzhoujay:html", version.ref = "html" }
+#markdown = { module = "com.zzhoujay.markdown:markdown", version.ref = "markdown" }
+html = { module = "com.vickyleu.html:htmlspanner", version.ref = "html" }
+markdown = { module = "com.vickyleu.markdown:parser", version.ref = "markdown" }
+
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 junit = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
 
