base64 latex and custom latex font size

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+
+org.gradle.jvmargs=-Xmx6G -XX:+HeapDumpOnOutOfMemoryError  -Dkotlin.daemon.jvm.options\="-Xmx6G" -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g -Dhttps.protocols=TLSv1.2,TLSv1.3
