--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,36 +1,37 @@
 [versions]
-agp = "8.7.0"
-annotation = "1.8.2"
+agp = "8.7.2"
+annotation = "1.9.1"
 disklrucache = "2.0.2"
 appcompat = "1.7.0"
 html = "1.0.2"
-kotlin = "2.0.20"
+kotlin = "2.1.0"
 markdown = "1.0.2"
 okhttp = "4.12.0"
 recyclerview = "1.3.2"
-android-compileSdk = "34"
+android-compileSdk = "35"
 android-minSdk = "26"
 android-targetSdk = "34"
 dokka = "1.9.20"
-
+htmlcleaner = "2.29"
 jvmTarget = "17"
 junit = "5.10.1"
 tagsoup = "1.2.1"
-coreKtx = "1.13.1"
+coreKtx = "1.15.0"
 junitVersion = "4.13.2"
 androidxJunit = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.6"
-activityCompose = "1.9.2"
-
+lifecycleRuntimeKtx = "2.8.7"
+activityCompose = "1.9.3"
+cssparser = "1.7"
 ksoup = "0.1.2"
 
-composeBom = "2024.09.03"
-coil-bom = "3.0.0-alpha10"
+composeBom = "2024.12.01"
+coil-bom = "3.0.0"
 
 [libraries]
+htmlcleaner = { module = "net.sourceforge.htmlcleaner:htmlcleaner", version.ref = "htmlcleaner" }
 tagsoup = { module = "org.ccil.cowan.tagsoup:tagsoup", version.ref = "tagsoup" }
-
+cssparser = { module = "com.osbcp:cssparser", version.ref = "cssparser" }
 coil-bom = { module = "io.coil-kt.coil3:coil-bom", version.ref = "coil-bom" }
 coil-core = { module = "io.coil-kt.coil3:coil" }
 coil-compose = { module = "io.coil-kt.coil3:coil-compose" }
@@ -38,8 +39,8 @@ coil-video = { module = "io.coil-kt.coil3:coil-video" }
 coil-gif = { module = "io.coil-kt.coil3:coil-gif" }
 coil-svg = { module = "io.coil-kt.coil3:coil-svg" }
 
-coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version = "3.0.0-alpha10" }
-coil-network-ktor = { module = "io.coil-kt.coil3:coil-network-ktor3", version = "3.0.0-alpha10" }
+coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil-bom" }
+coil-network-ktor = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil-bom" }
 
 
 ksoup = { module = "com.fleeksoft.ksoup:ksoup", version.ref = "ksoup" }
